<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:fillViewport="true"
        android:scrollbars="vertical">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_main"
            tools:context=".MainActivity">


        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/cReference" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="32dp"
                        android:layout_marginStart="16dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/cObligatoire"
                        android:text="@string/cObligatoire" android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/cReference"
                        android:textColor="@android:color/holo_red_dark" android:textStyle="bold"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/cName"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="32dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/cObligatoire"
                        android:hint="@string/cName"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/cEntreprise"
                            android:layout_marginTop="8dp"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                            app:layout_constraintTop_toBottomOf="@+id/cName" android:hint="@string/cEntreprise"
                            app:layout_constraintEnd_toStartOf="@+id/cSigle"/>
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/cSigle"
                            app:layout_constraintTop_toBottomOf="@+id/cName"
                            android:layout_marginTop="8dp"
                            app:layout_constraintStart_toEndOf="@+id/cEntreprise"
                            android:hint="@string/cSigle" android:textAllCaps="true"
                            android:width="@android:dimen/notification_large_icon_width"
                            android:layout_marginLeft="32dp"/>
                </LinearLayout>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/cIdentity"
                        android:hint="@string/cIdentity"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/cEntreprise"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="32dp" android:numeric="integer"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress"
                        android:ems="10"
                        android:id="@+id/cAddress"
                        android:hint="@string/cAddress"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/cIdentity"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="32dp" android:textAllCaps="true"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:layout_width="153dp"
                            android:layout_height="wrap_content"
                            android:inputType="number|textPersonName"
                            android:ems="10"
                            android:id="@+id/cPostcod"
                            android:hint="@string/cPostcod"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="16dp"
                            app:layout_constraintEnd_toStartOf="@+id/cTown"
                            android:layout_marginEnd="17dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="parent"
                            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/cTown"
                            android:hint="@string/cTown"
                            app:layout_constraintStart_toEndOf="@+id/cPostcod"
                            android:layout_marginStart="17dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="32dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/cAddress" android:textAllCaps="true"/>
                </LinearLayout>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/cPhone"
                        android:hint="@string/cPhone"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/cTown"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="32dp"
                        android:inputType="phone"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/cEmail"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/cPhone"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="32dp"
                        android:hint="@string/cEmail"/>
                <CheckBox
                        android:text="@string/cUsing_general_conditions"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:id="@+id/cUsing_general_conditions"
                        app:layout_constraintTop_toBottomOf="@+id/cEmail"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textAlignment="viewStart"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                />
                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:id="@+id/cNewsletters"
                        app:layout_constraintTop_toBottomOf="@+id/cUsing_general_conditions"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:text="@string/cNewsletters"
                        android:textAlignment="viewStart"
                        android:layout_marginTop="8dp"
                />
                <CheckBox
                        android:text="@string/cCommercial_offers_by_post"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:id="@+id/cCommercial_offers_by_post"
                        app:layout_constraintTop_toBottomOf="@+id/cCommercial_offers_by_sms"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"/>
                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:id="@+id/cCommercial_offers_by_mail"
                        app:layout_constraintTop_toBottomOf="@+id/cNewsletters"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/cCommercial_by_mail"
                        android:layout_marginLeft="@dimen/fab_margin"
                        android:layout_marginTop="8dp"
                />
                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:id="@+id/cCommercial_offers_by_sms"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/cCommercial_offers_by_mail"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:text="@string/cCommercial_offers_by_sms"
                />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_marginTop="16dp">

                <com.github.gcacace.signaturepad.views.SignaturePad
                        android:id="@+id/signaturePad"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:visibility="visible" android:background="@android:color/holo_blue_light"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/saveButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/save_button" android:textSize="12dp" android:layout_marginLeft="16dp"/>

                <Button
                        android:id="@+id/clearButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clear_button" android:textSize="12dp" android:layout_marginRight="16dp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="16dp">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/cJuridique"
                        android:text="@string/cJuridique" android:textSize="12sp"
                        android:layout_marginLeft="@dimen/fab_margin" android:layout_marginRight="@dimen/fab_margin"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
